# hexlet_pytest

./: .gitignore  README.md  pyproject.toml
tests/: test_fixtures.py  test_stack.py
