[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Alexander K <alexander_github@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
